--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <a href="#home">Home</a>
                 <a href="#about">Tentang Kami</a>
                 <a href="#menu">Menu</a>
-                <a href="#contact">Contact</a>
+                <a href="#products">Produk</a>
+                <a href="#contact">Kontak Kami</a>
             </div>
 
             <div class="navbar-extra">
@@ -34,6 +35,42 @@
                 <button id="hamburger-menu"><i data-feather="menu"></i></button>
                 <!-- <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a> -->
             </div>
+
+            <!-- Search Start -->
+            <div class="search-form">
+                <input type="search" id="search-box" placeholder="Search" />
+                <label for="search-box"><i data-feather="search"></i></label>
+            </div>
+            <!-- Search End -->
+
+            <!-- Shopping Cart Start -->
+            <div class="shopping-cart">
+                <div class="cart-item">
+                    <img src="img/products/produc1.jpg" alt="produc1" />
+                    <div class="item-detail">
+                        <h3>Product 1</h3>
+                        <div class="item-price">IDR 20.000</div>
+                    </div>
+                    <i data-feather="trash-2" class="trash"></i>
+                </div>
+                <div class="cart-item">
+                    <img src="img/products/produc1.jpg" alt="produc1" />
+                    <div class="item-detail">
+                        <h3>Product 1</h3>
+                        <div class="item-price">IDR 20.000</div>
+                    </div>
+                    <i data-feather="trash-2" class="trash"></i>
+                </div>
+                <div class="cart-item">
+                    <img src="img/products/produc1.jpg" alt="produc1" />
+                    <div class="item-detail">
+                        <h3>Product 1</h3>
+                        <div class="item-price">IDR 20.000</div>
+                    </div>
+                    <i data-feather="trash-2" class="trash"></i>
+                </div>
+            </div>
+            <!-- Shopping Cart End -->
         </nav>
         <!-- Navbar End-->
 
@@ -111,6 +148,78 @@
         </section>
         <!-- Menu Section End -->
 
+        <!-- Product Section Start -->
+        <section id="products" class="products">
+            <h2><span>Produk Unggulan</span> Kami</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vero, quae repellendus accusamus nisi
+                excepturi.
+            </p>
+            <div class="row">
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#" class="product-detail"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="img/products/produc1.jpg" alt="Product 1" />
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                        </div>
+                        <div class="product-price">IDR 20.000 <span>IDR 30.000</span></div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#" class="product-detail"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="img/products/produc1.jpg" alt="Product 1" />
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 20.000 <span>IDR 30.000</span></div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#" class="product-detail"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="img/products/produc1.jpg" alt="Product 1" />
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 20.000 <span>IDR 30.000</span></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Product Section End -->
+
         <!-- Contact Section Start -->
         <section id="contact" class="contact">
             <h2><span>Kontak</span> Kami</h2>
@@ -126,15 +235,15 @@
                 <form action="">
                     <div class="input-group">
                         <i data-feather="user"></i>
-                        <input type="text" placeholder="Masukkan Nama" required/>
+                        <input type="text" placeholder="Masukkan Nama" required />
                     </div>
                     <div class="input-group">
                         <i data-feather="mail"></i>
-                        <input type="email" placeholder="Masukkan Email" required/>
+                        <input type="email" placeholder="Masukkan Email" required />
                     </div>
                     <div class="input-group">
                         <i data-feather="phone"></i>
-                        <input type="tel" placeholder="Masukkan Nomor" required/>
+                        <input type="tel" placeholder="Masukkan Nomor" required />
                     </div>
                     <button type="submit" class="btn">Kirim Pesan</button>
                 </form>
@@ -162,6 +271,33 @@
             </div>
         </footer>
         <!-- Footer End -->
+
+        <!-- Modal Box Start -->
+        <div class="modal" id="item-detail-modal">
+            <div class="modal-container">
+                <a href="#" class="modal-close"><i data-feather="x"></i></a>
+                <div class="modal-content">
+                    <img src="img/products/produc1.jpg" alt="produc1" />
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugit quidem quas culpa
+                            praesentium architecto. Atque quis voluptatibus ipsum! Assumenda.
+                        </p>
+                        <div class="product-stars">
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star" class="star-full"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 20.000 <span>IDR 30.000</span></div>
+                        <a href="#"><i data-feather="shopping-cart"></i><span>Add to Cart</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal Box End -->
 
         <script>
             feather.replace();
