--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
 
         <!-- Hero Section Start-->
         <section class="hero" id="home">
-            <main class="content">
-                <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-                <p>Kami menyediakan berbagai macam kopi yang bisa anda nikmati</p>
-                <a href="#" class="cta">Beli Sekarang</a>
-            </main>
+            <div class="mask-container">
+                <main class="content">
+                    <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+                    <p>Kami menyediakan berbagai macam kopi yang bisa anda nikmati</p>
+                </main>
+            </div>
         </section>
         <!-- Hero Section End -->
 
